{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 80,
  "lineage": "f1475855-658c-84d6-1e12-881f54330568",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/networkInterfaces/SingleSSH-nic",
            "ip_configuration": [
              {
                "name": "SingleSSH-IP-Config",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/publicIPAddresses/SingleSSH-IP",
                "subnet_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/virtualNetworks/SingleSSH-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "SingleSSH-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "SingleSSH-Group"
          },
          "depends_on": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/SingleSSH-NSG",
            "location": "uksouth",
            "name": "SingleSSH-NSG",
            "resource_group_name": "SingleSSH-Group",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/SingleSSH-NSG/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "SingleSSH-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "SingleSSH-Group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "hms-270619153236",
            "fqdn": "hms-270619153236.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/publicIPAddresses/SingleSSH-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.143.169.168",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "SingleSSH-IP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "SingleSSH-Group",
            "sku": "Basic",
            "tags": {
              "environment": "Production"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/virtualNetworks/SingleSSH-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "SingleSSH-Group",
            "virtual_network_name": "SingleSSH-network"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/SingleSSH-Group/providers/Microsoft.Network/virtualNetworks/SingleSSH-network",
            "location": "uksouth",
            "name": "SingleSSH-network",
            "resource_group_name": "SingleSSH-Group"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}